--- a/HtmlFormat/HtmlFormat/Views/Shared/_Layout.cshtml
+++ b/HtmlFormat/HtmlFormat/Views/Shared/_Layout.cshtml
@@ -5,14 +5,26 @@
     <title>HTML Format</title>
     <link rel="canonical" href="https://www.htmlformat.org/">
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
-    <meta name="amp-google-client-id-api" content="googleanalytics">
+    <meta name="UA-43988280-10" content="googleanalytics">
     <partial name="_BoilerplateCssPartial.cshtml" />
     <partial name="_AmpCustomCssPartial.cshtml" />
     <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700" rel="stylesheet">
     <script async="" src="https://cdn.ampproject.org/v0.js"></script>
-
+    <script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
 </head>
 <body>
+    <amp-analytics type="gtag" data-credentials="include">
+        <script type="application/json">
+            {
+            "vars": {
+            "gtag_id": "UA-43988280-10",
+            "config": {
+            "UA-43988280-10": { "groups": "default" }
+            }
+            }
+            }
+        </script>
+    </amp-analytics>
     <header class="ampstart-headerbar fixed flex justify-start items-center top-0 left-0 right-0 pl2 pr4 pt2 md-pt0">
         <div role="button" aria-label="open sidebar" on="tap:header-sidebar.toggle" tabindex="0" class="ampstart-navbar-trigger  pr2 absolute top-0 pr0 mr2 mt2">
         </div>
