--- a/HtmlFormat/HtmlFormat/Views/Shared/_Layout.cshtml
+++ b/HtmlFormat/HtmlFormat/Views/Shared/_Layout.cshtml
@@ -10,21 +10,12 @@
     <partial name="_AmpCustomCssPartial.cshtml" />
     <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700" rel="stylesheet">
     <script async="" src="https://cdn.ampproject.org/v0.js"></script>
-    @*<script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>*@
+    <script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
 </head>
 <body>
-    @*<amp-analytics type="gtag" data-credentials="include">
-        <script type="application/json">
-            {
-            "vars": {
-            "gtag_id": "UA-43988280-10",
-            "config": {
-            "UA-43988280-10": { "groups": "default" }
-            }
-            }
-            }
-        </script>
-    </amp-analytics>*@
+    <!-- Google Tag Manager -->
+    <amp-analytics config="https://www.googletagmanager.com/amp.json?id=GTM-5FSSXC5&gtm.url=SOURCE_URL" data-credentials="include"></amp-analytics>
+
     <header class="ampstart-headerbar fixed flex justify-start items-center top-0 left-0 right-0 pl2 pr4 pt2 md-pt0">
         <div role="button" aria-label="open sidebar" on="tap:header-sidebar.toggle" tabindex="0" class="ampstart-navbar-trigger  pr2 absolute top-0 pr0 mr2 mt2">
         </div>
