--- a/HtmlFormat/HtmlFormat/Views/Shared/_Layout.cshtml
+++ b/HtmlFormat/HtmlFormat/Views/Shared/_Layout.cshtml
@@ -16,7 +16,6 @@
     <script async custom-template="amp-mustache" src="https://cdn.ampproject.org/v0/amp-mustache-0.2.js"></script>
 </head>
 <body>
-    <!-- Google Tag Manager -->
     <amp-analytics config="https://www.googletagmanager.com/amp.json?id=GTM-5FSSXC5&gtm.url=SOURCE_URL" data-credentials="include"></amp-analytics>
 
     <header class="ampstart-headerbar fixed flex justify-start items-center top-0 left-0 right-0 pl2 pr4 pt2 md-pt0">
@@ -32,18 +31,18 @@
     </header>
 
     <main id="content" role="main" class="main center">
-        <form action-xhr="/home/format" method="post">
-            <textarea name="tbInput" [text]="rawHtml" id="tbInput" class="block p0 m0" style="width:100%;height:300px" placeholder="Paste your code or a URL here .."></textarea>
-            <div>
+        <form action-xhr="/home/format" method="post" class="mb2">
+            <textarea name="tbInput" [text]="rawHtml" id="tbInput" class="block p0 m0 mb2" style="width:100%;height:300px" placeholder="Paste your code or a URL here .."></textarea>
+            <p class="mb2">
                 <input type="submit" class="ampstart-btn ampstart-btn-secondary caps" value="Format" />
                 <button name="btnClear" id="btnClear" class="ampstart-btn ampstart-btn-secondary caps" on="tap:AMP.setState({ rawHtml: '' })">Clear</button>
-            </div>
-            <div submit-success>
+            </p>
+            <div submit-success class="mb2">
                 <template type="amp-mustache">
                     <textarea name="tbOutput" id="tbOutput" class="block p0 m0" style="width:100%;height:300px" readonly>{{formattedHtml}}</textarea>
                 </template>
             </div>
-            <div submit-error>
+            <div submit-error class="mb2">
                 <template type="amp-mustache">
                     error
                 </template>
@@ -54,7 +53,7 @@
     <footer class="commerce-footer center">
         <nav class="mx-auto md-mb0 md-pt5 md-pb5">
             <ul class="list-reset flex flex-wrap my0 md-pl4 md-pr4 md-mxn4">
-                <li class="pt3 md-pt0 md-px4 col-12 md-col-3 lg-col-2">
+                <li class="pt3 md-pt0 md-px4 col-12 md-col-3 lg-col-4">
                     <h2 class="commerce-footer-header h7 pb2">About us</h2>
                     <ul class="list-reset pb3 md-mx0">
                         <li>
@@ -69,7 +68,7 @@
                     </ul>
                     <hr class="md-hide lg-hide col-12 mx0">
                 </li>
-                <li class="pt3 md-pt0 md-px4 col-12 md-col-3 lg-col-2">
+                <li class="pt3 md-pt0 md-px4 col-12 md-col-3 lg-col-4">
                     <h2 class="commerce-footer-header h7 pb2">Contact Us</h2>
                     <ul class="list-reset pb3 md-mx0">
                         <li>
@@ -84,9 +83,7 @@
                     </ul>
                     <hr class="md-hide lg-hide col-12 mx0">
                 </li>
-                <li class="pt4 pb3 md-pt0 col-12 md-col-3">
-
-
+                <li class="pt3 md-pt0 md-px4 col-12 md-col-3 lg-col-4">
                     <h3 class="h7 block pt3">follow us</h3>
                     <ul class="ampstart-social-follow list-reset flex justify-around items-center flex-wrap m0 mb4">
                         <li>
@@ -99,9 +96,6 @@
                             <a href="#" target="_blank" class="inline-block p1" aria-label="Link to AMP HTML Twitter"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="22.2" viewBox="0 0 53 49"><title>Twitter</title><path d="M45 6.9c-1.6 1-3.3 1.6-5.2 2-1.5-1.6-3.6-2.6-5.9-2.6-4.5 0-8.2 3.7-8.2 8.3 0 .6.1 1.3.2 1.9-6.8-.4-12.8-3.7-16.8-8.7C8.4 9 8 10.5 8 12c0 2.8 1.4 5.4 3.6 6.9-1.3-.1-2.6-.5-3.7-1.1v.1c0 4 2.8 7.4 6.6 8.1-.7.2-1.5.3-2.2.3-.5 0-1 0-1.5-.1 1 3.3 4 5.7 7.6 5.7-2.8 2.2-6.3 3.6-10.2 3.6-.6 0-1.3-.1-1.9-.1 3.6 2.3 7.9 3.7 12.5 3.7 15.1 0 23.3-12.6 23.3-23.6 0-.3 0-.7-.1-1 1.6-1.2 3-2.7 4.1-4.3-1.4.6-3 1.1-4.7 1.3 1.7-1 3-2.7 3.6-4.6" class="ampstart-icon ampstart-icon-twitter"></path></svg></a>
                         </li>
                     </ul>
-                </li>
-                <li class="flex-auto right-align">
-                    HTML Format
                 </li>
             </ul>
         </nav>
