src="https://www.htmlformat.org/home/codemirror?guid={{guid}}">

--- a/HtmlFormat/HtmlFormat/Views/Home/CodeMirror.cshtml
+++ b/HtmlFormat/HtmlFormat/Views/Home/CodeMirror.cshtml
@@ -17,11 +17,12 @@
     <script src="~/mode/css/css.js"></script>
     <script src="~/mode/htmlmixed/htmlmixed.js"></script>
     <style>
-        /*.CodeMirror {
+        .CodeMirror {
             border-top: 1px solid #888;
             border-bottom: 1px solid #888;
             border-right: 1px solid #888;
-        }*/
+            border-left: 1px solid #888;
+        }
     </style>
 </head>
 <body>
