--- a/HtmlFormat/HtmlFormat/Views/Home/CodeMirror.cshtml
+++ b/HtmlFormat/HtmlFormat/Views/Home/CodeMirror.cshtml
@@ -5,17 +5,25 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <link rel="stylesheet"
-          href="//highlightjs.org/static/demo/styles/a11y-light.css">
-    <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.18.1/highlight.min.js"></script>
-    <style>
-        .myStyle {
-            border: 1px solid #888;
-        }
-    </style>
+    <link rel=stylesheet href="/doc/docs.css">
+    <link rel="stylesheet" href="/lib/codemirror.css">
+    <link rel="stylesheet" href="/addon/hint/show-hint.css">
+    <script src="/lib/codemirror.js"></script>
+    <script src="/addon/hint/show-hint.js"></script>
+    <script src="/addon/hint/xml-hint.js"></script>
+    <script src="/addon/hint/html-hint.js"></script>
+    <script src="/mode/xml/xml.js"></script>
+    <script src="/mode/javascript/javascript.js"></script>
+    <script src="/mode/css/css.js"></script>
+    <script src="/mode/htmlmixed/htmlmixed.js"></script>
 </head>
-<body class="myStyle">
-    <pre><code class="xml hljs">@Model</code></pre>
-    <script>hljs.initHighlightingOnLoad();</script>
+<body>
+    <textarea id="myTextarea">@Model</textarea>
+    <script>
+        var editor = CodeMirror.fromTextArea(myTextarea, {
+            lineNumbers: true,
+            readOnly: false,
+        });
+    </script>
 </body>
 </html>
