--- a/HtmlFormat/HtmlFormat/Views/Home/Test.cshtml
+++ b/HtmlFormat/HtmlFormat/Views/Home/Test.cshtml
@@ -1,4 +1,7 @@
-﻿<!doctype html>
+﻿@{
+    Layout = null;
+}
+<!doctype html>
 <html ⚡="" lang="en">
 <head>
     <meta charset="utf-8">
@@ -15,6 +18,7 @@
     <script async custom-element="amp-form" src="https://cdn.ampproject.org/v0/amp-form-0.1.js"></script>
     <script async custom-template="amp-mustache" src="https://cdn.ampproject.org/v0/amp-mustache-0.2.js"></script>
     <script async custom-element="amp-iframe" src="https://cdn.ampproject.org/v0/amp-iframe-0.1.js"></script>
+    <script async custom-element="amp-script" src="https://cdn.ampproject.org/v0/amp-script-0.1.js"></script>
 </head>
 <body>
     <amp-analytics config="https://www.googletagmanager.com/amp.json?id=GTM-5FSSXC5&gtm.url=SOURCE_URL" data-credentials="include"></amp-analytics>
@@ -28,33 +32,15 @@
         <div class="ampstart-headerbar-fixed center m0 p0 flex justify-center nowrap absolute top-0 right-0 pt2 pr3">
             <div class="mr2">
             </div>
-        </div>        
+        </div>
     </header>
 
     <main id="content" role="main" class="main center">
 
-        <form action-xhr="/home/format" method="post" class="mb2">
-            <textarea name="tbInput" [text]="rawHtml" id="tbInput" class="hljs xml mb2" style="width:100%;height:500px" placeholder="Paste your code or a URL here .."></textarea>
-            <p class="mb2">
-                <input type="submit" class="ampstart-btn ampstart-btn-secondary caps" value="Format" />
-                <button name="btnClear" id="btnClear" class="ampstart-btn ampstart-btn-secondary caps" on="tap:AMP.setState({ rawHtml: '' })">Clear</button>
-            </p>
-            <div submit-success class="mb2">
-                <template type="amp-mustache">
-                    <amp-iframe width="auto"
-                                height="500"
-                                sandbox="allow-scripts"
-                                layout="fixed-height"
-                                src="https://localhost:44392/home/codemirror?guid={{guid}}">
-                    </amp-iframe>
-                </template>
-            </div>
-            <div submit-error class="mb2">
-                <template type="amp-mustache">
-                    Error !!!
-                </template>
-            </div>
-        </form>
+        <amp-script layout="container" src="https://localhost:44392/myhighlight.min.js">
+            <pre><code class="xml hljs">this is a test asd asdas asd a asdf </code></pre>
+        </amp-script>
+       
     </main>
 
     <footer class="commerce-footer center">
@@ -109,4 +95,3 @@
     </footer>
 </body>
 </html>
-@RenderBody()
