src="https://www.htmlformat.org/home/codemirror?guid={{guid}}">

--- a/HtmlFormat/HtmlFormat/Views/Shared/_Layout.cshtml
+++ b/HtmlFormat/HtmlFormat/Views/Shared/_Layout.cshtml
@@ -45,7 +45,7 @@
                                 height="500"
                                 sandbox="allow-scripts"
                                 layout="fixed-height"
-                                src="https://localhost:44392/home/codemirror?guid={{guid}}">
+                                src="https://www.htmlformat.org/home/codemirror?guid={{guid}}">
                     </amp-iframe>
                 </template>
             </div>
