--- a/HtmlFormat/HtmlFormat/Views/Shared/_Layout.cshtml
+++ b/HtmlFormat/HtmlFormat/Views/Shared/_Layout.cshtml
@@ -1,4 +1,6 @@
-﻿<!doctype html>
+﻿@model HtmlFormat.Models.HomeViewModel
+
+<!doctype html>
 <html ⚡="" lang="en">
 <head>
     <meta charset="utf-8">
@@ -15,26 +17,31 @@
     <script async custom-element="amp-form" src="https://cdn.ampproject.org/v0/amp-form-0.1.js"></script>
     <script async custom-template="amp-mustache" src="https://cdn.ampproject.org/v0/amp-mustache-0.2.js"></script>
     <script async custom-element="amp-iframe" src="https://cdn.ampproject.org/v0/amp-iframe-0.1.js"></script>
+    <script async custom-element="amp-addthis" src="https://cdn.ampproject.org/v0/amp-addthis-0.1.js"></script>
 </head>
 <body>
     <amp-analytics config="https://www.googletagmanager.com/amp.json?id=GTM-5FSSXC5&gtm.url=SOURCE_URL" data-credentials="include"></amp-analytics>
 
-    <header class="ampstart-headerbar fixed flex justify-start items-center top-0 left-0 right-0 pl2 pr4 pt2 md-pt0">
+    <header class="ampstart-headerbar flex justify-start items-center top-0 left-0 right-0 pl2 pr4 pt2 md-pt0">
         <div role="button" aria-label="open sidebar" on="tap:header-sidebar.toggle" tabindex="0" class="ampstart-navbar-trigger  pr2 absolute top-0 pr0 mr2 mt2">
         </div>
         <a href="/" class="text-decoration-none inline-block mx-auto ampstart-headerbar-home-link mb1 md-mb0 ">
-            <h1>HTML Format</h1>
+            <h1>
+                @Model?.Title
+            </h1>
         </a>
         <div class="ampstart-headerbar-fixed center m0 p0 flex justify-center nowrap absolute top-0 right-0 pt2 pr3">
             <div class="mr2">
             </div>
-        </div>        
+        </div>
     </header>
 
-    <main id="content" role="main" class="main center">
-
+    <main id="content" role="main" class="center">
+        <h2>
+            @Model?.Description
+        </h2>
         <form action-xhr="/home/format" method="post" class="mb2">
-            <textarea name="tbInput" [text]="rawHtml" id="tbInput" class="hljs xml mb2" style="width:100%;height:500px" placeholder="Paste your code or a URL here .."></textarea>
+            <textarea name="tbInput" [text]="rawHtml" id="tbInput" class="hljs xml mb2" style="width:100%;height:300px" placeholder="Paste your code or a URL here .."></textarea>
             <p class="mb2">
                 <input type="submit" class="ampstart-btn ampstart-btn-secondary caps" value="Format" />
                 <button name="btnClear" id="btnClear" class="ampstart-btn ampstart-btn-secondary caps" on="tap:AMP.setState({ rawHtml: '' })">Clear</button>
@@ -42,7 +49,7 @@
             <div submit-success class="mb2">
                 <template type="amp-mustache">
                     <amp-iframe width="auto"
-                                height="500"
+                                height="305"
                                 sandbox="allow-scripts"
                                 layout="fixed-height"
                                 src="https://www.htmlformat.org/home/codemirror?guid={{guid}}">
@@ -57,55 +64,9 @@
         </form>
     </main>
 
-    <footer class="commerce-footer center">
-        <nav class="mx-auto md-mb0 md-pt5 md-pb5">
-            <ul class="list-reset flex flex-wrap my0 md-pl4 md-pr4 md-mxn4">
-                <li class="pt3 md-pt0 md-px4 col-12 md-col-3 lg-col-4">
-                    <h2 class="commerce-footer-header h7 pb2">About us</h2>
-                    <ul class="list-reset pb3 md-mx0">
-                        <li>
-                            <a class="text-decoration-none" href="#">Size Guide</a>
-                        </li>
-                        <li>
-                            <a class="text-decoration-none" href="#">Returns Policy</a>
-                        </li>
-                        <li>
-                            <a class="text-decoration-none" href="#">Cookie &amp; privacy policy</a>
-                        </li>
-                    </ul>
-                    <hr class="md-hide lg-hide col-12 mx0">
-                </li>
-                <li class="pt3 md-pt0 md-px4 col-12 md-col-3 lg-col-4">
-                    <h2 class="commerce-footer-header h7 pb2">Contact Us</h2>
-                    <ul class="list-reset pb3 md-mx0">
-                        <li>
-                            <a class="text-decoration-none" href="tel:+440000000000">+44(0)000 000 0000</a>
-                        </li>
-                        <li>
-                            <a class="text-decoration-none" href="mailto:info@@BS-LDN">info@@BS-LDN</a>
-                        </li>
-                        <li>
-                            <a class="text-decoration-none" href="#">Find a Store</a>
-                        </li>
-                    </ul>
-                    <hr class="md-hide lg-hide col-12 mx0">
-                </li>
-                <li class="pt3 md-pt0 md-px4 col-12 md-col-3 lg-col-4">
-                    <h3 class="h7 block pt3">follow us</h3>
-                    <ul class="ampstart-social-follow list-reset flex justify-around items-center flex-wrap m0 mb4">
-                        <li>
-                            <a href="#" target="_blank" class="inline-block p1" aria-label="Link to AMP HTML Facebook"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="23.6" viewBox="0 0 56 55"><title>Facebook</title><path d="M47.5 43c0 1.2-.9 2.1-2.1 2.1h-10V30h5.1l.8-5.9h-5.9v-3.7c0-1.7.5-2.9 3-2.9h3.1v-5.3c-.6 0-2.4-.2-4.6-.2-4.5 0-7.5 2.7-7.5 7.8v4.3h-5.1V30h5.1v15.1H10.7c-1.2 0-2.2-.9-2.2-2.1V8.3c0-1.2 1-2.2 2.2-2.2h34.7c1.2 0 2.1 1 2.1 2.2V43" class="ampstart-icon ampstart-icon-fb"></path></svg></a>
-                        </li>
-                        <li>
-                            <a href="#" target="_blank" class="inline-block p1" aria-label="Link to AMP HTML Instagram"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 54 54"><title>instagram</title><path d="M27.2 6.1c-5.1 0-5.8 0-7.8.1s-3.4.4-4.6.9c-1.2.5-2.3 1.1-3.3 2.2-1.1 1-1.7 2.1-2.2 3.3-.5 1.2-.8 2.6-.9 4.6-.1 2-.1 2.7-.1 7.8s0 5.8.1 7.8.4 3.4.9 4.6c.5 1.2 1.1 2.3 2.2 3.3 1 1.1 2.1 1.7 3.3 2.2 1.2.5 2.6.8 4.6.9 2 .1 2.7.1 7.8.1s5.8 0 7.8-.1 3.4-.4 4.6-.9c1.2-.5 2.3-1.1 3.3-2.2 1.1-1 1.7-2.1 2.2-3.3.5-1.2.8-2.6.9-4.6.1-2 .1-2.7.1-7.8s0-5.8-.1-7.8-.4-3.4-.9-4.6c-.5-1.2-1.1-2.3-2.2-3.3-1-1.1-2.1-1.7-3.3-2.2-1.2-.5-2.6-.8-4.6-.9-2-.1-2.7-.1-7.8-.1zm0 3.4c5 0 5.6 0 7.6.1 1.9.1 2.9.4 3.5.7.9.3 1.6.7 2.2 1.4.7.6 1.1 1.3 1.4 2.2.3.6.6 1.6.7 3.5.1 2 .1 2.6.1 7.6s0 5.6-.1 7.6c-.1 1.9-.4 2.9-.7 3.5-.3.9-.7 1.6-1.4 2.2-.7.7-1.3 1.1-2.2 1.4-.6.3-1.7.6-3.5.7-2 .1-2.6.1-7.6.1-5.1 0-5.7 0-7.7-.1-1.8-.1-2.9-.4-3.5-.7-.9-.3-1.5-.7-2.2-1.4-.7-.7-1.1-1.3-1.4-2.2-.3-.6-.6-1.7-.7-3.5 0-2-.1-2.6-.1-7.6 0-5.1.1-5.7.1-7.7.1-1.8.4-2.8.7-3.5.3-.9.7-1.5 1.4-2.2.7-.6 1.3-1.1 2.2-1.4.6-.3 1.6-.6 3.5-.7h7.7zm0 5.8c-5.4 0-9.7 4.3-9.7 9.7 0 5.4 4.3 9.7 9.7 9.7 5.4 0 9.7-4.3 9.7-9.7 0-5.4-4.3-9.7-9.7-9.7zm0 16c-3.5 0-6.3-2.8-6.3-6.3s2.8-6.3 6.3-6.3 6.3 2.8 6.3 6.3-2.8 6.3-6.3 6.3zm12.4-16.4c0 1.3-1.1 2.3-2.3 2.3-1.3 0-2.3-1-2.3-2.3 0-1.2 1-2.3 2.3-2.3 1.2 0 2.3 1.1 2.3 2.3z" class="ampstart-icon ampstart-icon-instagram"></path></svg></a>
-                        </li>
-                        <li>
-                            <a href="#" target="_blank" class="inline-block p1" aria-label="Link to AMP HTML Twitter"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="22.2" viewBox="0 0 53 49"><title>Twitter</title><path d="M45 6.9c-1.6 1-3.3 1.6-5.2 2-1.5-1.6-3.6-2.6-5.9-2.6-4.5 0-8.2 3.7-8.2 8.3 0 .6.1 1.3.2 1.9-6.8-.4-12.8-3.7-16.8-8.7C8.4 9 8 10.5 8 12c0 2.8 1.4 5.4 3.6 6.9-1.3-.1-2.6-.5-3.7-1.1v.1c0 4 2.8 7.4 6.6 8.1-.7.2-1.5.3-2.2.3-.5 0-1 0-1.5-.1 1 3.3 4 5.7 7.6 5.7-2.8 2.2-6.3 3.6-10.2 3.6-.6 0-1.3-.1-1.9-.1 3.6 2.3 7.9 3.7 12.5 3.7 15.1 0 23.3-12.6 23.3-23.6 0-.3 0-.7-.1-1 1.6-1.2 3-2.7 4.1-4.3-1.4.6-3 1.1-4.7 1.3 1.7-1 3-2.7 3.6-4.6" class="ampstart-icon ampstart-icon-twitter"></path></svg></a>
-                        </li>
-                    </ul>
-                </li>
-            </ul>
-        </nav>
+    <footer class="center">
+        <h3>Share us:</h3>
+        <amp-addthis width="320" height="92" data-pub-id="ra-5e6d39d23591d1e6" data-widget-id="wcaj" data-widget-type="inline"></amp-addthis>
     </footer>
 </body>
 </html>
