--- a/HtmlFormat/HtmlFormat/Views/Home/CodeMirror.cshtml
+++ b/HtmlFormat/HtmlFormat/Views/Home/CodeMirror.cshtml
@@ -8,7 +8,16 @@
     <link rel=stylesheet href="/doc/docs.css">
     <link rel="stylesheet" href="/lib/codemirror.css">
     <link rel="stylesheet" href="/addon/hint/show-hint.css">
+    <link rel="stylesheet" href="/addon/fold/foldgutter.css" />
     <script src="/lib/codemirror.js"></script>
+    <script src="/lib/util/formatting.js"></script>
+    <script src="/addon/fold/foldcode.js"></script>
+    <script src="/addon/fold/foldgutter.js"></script>
+    <script src="/addon/fold/brace-fold.js"></script>
+    <script src="/addon/fold/xml-fold.js"></script>
+    <script src="/addon/fold/indent-fold.js"></script>
+    <script src="/addon/fold/markdown-fold.js"></script>
+    <script src="/addon/fold/comment-fold.js"></script>
     <script src="/addon/hint/show-hint.js"></script>
     <script src="/addon/hint/xml-hint.js"></script>
     <script src="/addon/hint/html-hint.js"></script>
@@ -18,18 +27,45 @@
     <script src="/mode/htmlmixed/htmlmixed.js"></script>
     <style>
         .CodeMirror {
-  border: 1px solid #eee;
-}
+            border: 1px solid #eee;
+        }
     </style>
 </head>
 <body style="background-color:white">
     <textarea id="myTextarea">@Model</textarea>
+    <button onclick="autoFormatSelection()" style="position:center">
+        Format
+    </button>
+
     <script>
         var editor = CodeMirror.fromTextArea(myTextarea, {
-            lineNumbers: true,
             mode: "text/html",
-            readOnly: false,
+            lineNumbers: true,
+            lineWrapping: true,
+            extraKeys: { "Ctrl-Q": function (cm) { cm.foldCode(cm.getCursor()); } },
+            foldGutter: true,
+            gutters: ["CodeMirror-linenumbers", "CodeMirror-foldgutter"]
         });
+
+        function getSelectedRange() {
+            return { from: editor.getCursor(true), to: editor.getCursor(false) };
+        }
+
+        function autoFormatSelection() {
+            var range = getSelectedRange();
+            editor.autoFormatRange({
+                line: 0,
+                ch: 0,
+                sticky: null
+            },
+
+                {
+                    line: editor.doc.size,
+                    ch: 10000000000,
+                    sticky: null
+                });
+        }
+
     </script>
 </body>
 </html>
