--- a/HtmlFormat/HtmlFormat/Views/Home/CodeMirror.cshtml
+++ b/HtmlFormat/HtmlFormat/Views/Home/CodeMirror.cshtml
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/lib/codemirror.css">
     <link rel="stylesheet" href="/addon/hint/show-hint.css">
     <link rel="stylesheet" href="/addon/fold/foldgutter.css" />
+    <link href="/css/amp.min.css" rel="stylesheet" />
     <script src="/lib/codemirror.js"></script>
     <script src="/lib/util/formatting.js"></script>
     <script src="/addon/fold/foldcode.js"></script>
@@ -33,12 +34,14 @@
 </head>
 <body style="background-color:white">
     <textarea id="myTextarea">@Model</textarea>
-    <button onclick="autoFormatSelection()">
-        Format
-    </button>
-    <button onclick="selectAll()">
-        Select All
-    </button>
+    <div class="center">
+        <button onclick="autoFormatSelection()" class="ampstart-btn ampstart-btn-secondary">
+            Format
+        </button>
+        <button onclick="selectAll()" class="ampstart-btn ampstart-btn-secondary">
+            Select All
+        </button>
+    </div>
 
     <script>
         var editor = CodeMirror.fromTextArea(myTextarea, {
