--- a/HtmlFormat/HtmlFormat/Views/Home/CodeMirror.cshtml
+++ b/HtmlFormat/HtmlFormat/Views/Home/CodeMirror.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model CodeMirrorViewModel
+@{
     Layout = null;
 }
 <!doctype html>
@@ -33,7 +34,7 @@
     </style>
 </head>
 <body style="background-color:white">
-    <textarea id="myTextarea">@Model</textarea>
+    <textarea id="myTextarea">@Model.DefaultValue</textarea>
     <div class="center">
         <button onclick="autoFormatSelection()" class="ampstart-btn ampstart-btn-secondary">
             Format
@@ -42,10 +43,9 @@
             Select All
         </button>
     </div>
-
     <script>
         var editor = CodeMirror.fromTextArea(myTextarea, {
-            mode: "text/html",
+            mode: "@Model.Mode",
             lineNumbers: true,
             lineWrapping: true,
             extraKeys: { "Ctrl-Q": function (cm) { cm.foldCode(cm.getCursor()); } },
