--- a/HtmlFormat/HtmlFormat/Views/Home/CodeMirror.cshtml
+++ b/HtmlFormat/HtmlFormat/Views/Home/CodeMirror.cshtml
@@ -14,6 +14,12 @@
     <link href="/addon/hint/show-hint.css" rel="stylesheet" />
     <script src="/lib/codemirror.js"></script>
     <script src="/lib/util/formatting.js"></script>
+    <script src="/addon/edit/closebrackets.js"></script>
+    <script src="/addon/edit/closetag.js"></script>
+    <script src="/addon/edit/continuelist.js"></script>
+    <script src="/addon/edit/matchbrackets.js"></script>
+    <script src="/addon/edit/matchtags.js"></script>
+    <script src="/addon/edit/trailingspace.js"></script>
     <script src="/addon/fold/foldcode.js"></script>
     <script src="/addon/fold/foldgutter.js"></script>
     <script src="/addon/fold/brace-fold.js"></script>
@@ -21,10 +27,7 @@
     <script src="/addon/fold/indent-fold.js"></script>
     <script src="/addon/fold/markdown-fold.js"></script>
     <script src="/addon/fold/comment-fold.js"></script>
-    <script src="/mode/xml/xml.js"></script>
-    <script src="/mode/javascript/javascript.js"></script>
-    <script src="/mode/css/css.js"></script>
-    <script src="/mode/htmlmixed/htmlmixed.js"></script>
+
     <script src="/addon/hint/anyword-hint.js"></script>
     <script src="/addon/hint/css-hint.js"></script>
     <script src="/addon/hint/html-hint.js"></script>
@@ -42,6 +45,12 @@
     <script src="/addon/lint/json-lint.js"></script>
     <script src="/addon/lint/lint.js"></script>
     <script src="/addon/lint/yaml-lint.js"></script>
+    <script src="/addon/comment/comment.js"></script>
+    <script src="/addon/comment/continuecomment.js"></script>
+    <script src="/mode/xml/xml.js"></script>
+    <script src="/mode/javascript/javascript.js"></script>
+    <script src="/mode/css/css.js"></script>
+    <script src="/mode/htmlmixed/htmlmixed.js"></script>
     <style>
         .CodeMirror {
             border: 1px solid #eee;
@@ -60,16 +69,50 @@
     </div>
     <script>
         var editor = CodeMirror.fromTextArea(myTextarea, {
-            mode: "@Model.Mode",
-            lineNumbers: true,
-            lineWrapping: true,
-            styleActiveLine: true,
-            foldGutter: true,
-            line: true,
-            gutters: ["CodeMirror-linenumbers", "CodeMirror-foldgutter", "@(Model.Lint ? "CodeMirror-lint-markers" : "")"],
-            lint: "@(Model.Lint)"
+            mode: "@(Html.Raw(Model.Mode))",
+            @if (Model.Line)
+            {
+            @:    line: true,
+            }
+            @if (Model.LineNumbers)
+            {
+            @:    lineNumbers: true,
+            }
+            @if (Model.LineWrapping)
+            {
+            @:    lineWrapping: true,
+            }
+            @if (Model.StyleActiveLine)
+            {
+            @:    styleActiveLine: true,
+            }
+            @if (Model.AutoCloseBrackets)
+            {
+            @:    autoCloseBrackets: true,
+            }
+            @if (Model.FoldGutter)
+            {
+            @:    foldGutter: true,
+            }
+            @if (Model.DisplayGutterCustom)
+            {
+            @:   gutters: ["CodeMirror-linenumbers", "CodeMirror-foldgutter", "CodeMirror-lint-markers"],
+            }
+           @if (Model.Lint)
+            {
+            @:    lint: true,
+            }
+            @if (Model.MatchBrackets)
+            {
+            @:    matchBrackets: true,
+            }
         });
-
+        //var editor = CodeMirror.fromTextArea(myTextarea, {
+        //    matchBrackets: true,
+        //    autoCloseBrackets: true,
+        //    mode: "application/ld+json",
+        //    lineWrapping: true
+        //});
         editor.setSize("100%", "80%");
 
         function getSelectedRange() {
