--- a/HtmlFormat/HtmlFormat/Views/Home/CodeMirror.cshtml
+++ b/HtmlFormat/HtmlFormat/Views/Home/CodeMirror.cshtml
@@ -329,17 +329,84 @@
 </head>
 <body style="background-color:white">
     <textarea id="myTextarea">@Model.DefaultValue</textarea>
+   
     <div class="center">
         <button onclick="autoFormatSelection()" class="ampstart-btn ampstart-btn-secondary">
             Format
-        </button>
-        <button onclick="selectAll()" class="ampstart-btn ampstart-btn-secondary">
+        </button> <p>
+                 Theme: <select onchange="selectTheme()" id=select>
+                <option selected>default</option>
+                <option>3024-day</option>
+                <option>3024-night</option>
+                <option>abcdef</option>
+                <option>ambiance</option>
+                <option>ayu-dark</option>
+                <option>ayu-mirage</option>
+                <option>base16-dark</option>
+                <option>base16-light</option>
+                <option>bespin</option>
+                <option>blackboard</option>
+                <option>cobalt</option>
+                <option>colorforth</option>
+                <option>darcula</option>
+                <option>dracula</option>
+                <option>duotone-dark</option>
+                <option>duotone-light</option>
+                <option>eclipse</option>
+                <option>elegant</option>
+                <option>erlang-dark</option>
+                <option>gruvbox-dark</option>
+                <option>hopscotch</option>
+                <option>icecoder</option>
+                <option>idea</option>
+                <option>isotope</option>
+                <option>lesser-dark</option>
+                <option>liquibyte</option>
+                <option>lucario</option>
+                <option>material</option>
+                <option>material-darker</option>
+                <option>material-palenight</option>
+                <option>material-ocean</option>
+                <option>mbo</option>
+                <option>mdn-like</option>
+                <option>midnight</option>
+                <option>monokai</option>
+                <option>moxer</option>
+                <option>neat</option>
+                <option>neo</option>
+                <option>night</option>
+                <option>nord</option>
+                <option>oceanic-next</option>
+                <option>panda-syntax</option>
+                <option>paraiso-dark</option>
+                <option>paraiso-light</option>
+                <option>pastel-on-dark</option>
+                <option>railscasts</option>
+                <option>rubyblue</option>
+                <option>seti</option>
+                <option>shadowfox</option>
+                <option>solarized dark</option>
+                <option>solarized light</option>
+                <option>the-matrix</option>
+                <option>tomorrow-night-bright</option>
+                <option>tomorrow-night-eighties</option>
+                <option>ttcn</option>
+                <option>twilight</option>
+                <option>vibrant-ink</option>
+                <option>xq-dark</option>
+                <option>xq-light</option>
+                <option>yeti</option>
+                <option>yonce</option>
+                <option>zenburn</option>
+            </select>
+        </p>
+        @*<button onclick="selectAll()" class="ampstart-btn ampstart-btn-secondary">
             Select All
-        </button>
+        </button>*@
     </div>
     <script>
         var editor = CodeMirror.fromTextArea(myTextarea, {
-            mode: "@(Html.Raw(Model.Mode?.Replace("-", "+")))",           
+            mode: "@(Html.Raw(Model.Mode?.Replace("-", "+")))",
             @if (Model.Line)
             {
             @:    line: true,
@@ -384,6 +451,12 @@
         //    lineWrapping: true
         //});
         editor.setSize("100%", "400px");
+
+        var input = document.getElementById("select");
+        function selectTheme() {
+            var theme = input.options[input.selectedIndex].textContent;
+            editor.setOption("theme", theme);
+        }
 
         function getSelectedRange() {
             return { from: editor.getCursor(true), to: editor.getCursor(false) };
